--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://sql6.freesqldatabase.com:3306/sql6684995
-spring.datasource.username=sql6684995
-spring.datasource.password=5aBZA6zs3D
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-#spring.jpa.show-sql: true
-
-
-
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/liveapp
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
