--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/liveapp
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/documentservice
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
